# dnd-ai

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  FRAMEWORK_DESIGN.md  README.md
.github/workflows/: ci.yml
agents/: Cargo.toml  RESEARCH_PLAN.md  context_management_report.md
agents/examples/: simple_chat.rs  tool_agent.rs
agents/research/context/: REPORT.md
agents/research/creativity/: REPORT.md
agents/research/industry/: REPORT.md
agents/research/learning/: REPORT.md
agents/research/misc/: REPORT.md
agents/research/planning/: REPORT.md
agents/research/privacy/: REPORT.md
agents/research/safety/: REPORT.md
agents/research/security/: REPORT.md
agents/src/: lib.rs
agents/src/dnd/: app.rs  events.rs  mod.rs
agents/src/dnd/ai/: dm_agent.rs  mod.rs  prompts.rs  tools.rs
agents/src/dnd/ai/subagents/: combat.rs  mod.rs  npc.rs  rules.rs
agents/src/dnd/game/: character.rs  combat.rs  conditions.rs  dice.rs  mod.rs  skills.rs  state.rs
agents/src/dnd/ui/: layout.rs  mod.rs  render.rs  theme.rs
agents/src/dnd/ui/widgets/: character_panel.rs  combat_tracker.rs  dice_roll.rs  input.rs  mod.rs  narrative.rs  status_bar.rs
claude/: Cargo.toml
claude/src/: lib.rs
dnd/: Cargo.toml
dnd-bevy/: Cargo.toml
dnd-bevy/src/: character_creation.rs  effects.rs  main.rs  runtime.rs  state.rs
dnd-bevy/src/animations/: damage.rs  dice.rs  effects.rs
dnd-bevy/src/ui/: input.rs  mod.rs  overlays.rs  panels.rs
dnd-core/: Cargo.toml
dnd-core/examples/: generate_transcripts.rs  test_dice.rs  test_session.rs
dnd-core/src/: character_builder.rs  class_data.rs  dice.rs  headless.rs  items.rs  lib.rs  persist.rs  rules.rs  session.rs  spells.rs  testing.rs  world.rs
dnd-core/src/dm/: agent.rs  memory.rs  mod.rs  relevance.rs  tools.rs
dnd-core/src/dm/prompts/: background_hooks.txt  class_features.txt  combat.txt  combat_triggers.txt  combat_turns.txt  dm_base.txt  encounter_pacing.txt  rest_rules.txt  skill_checks.txt  story_memory.txt
dnd-core/src/dm/story_memory/: consequence.rs  entity.rs  fact.rs  mod.rs  relationship.rs  store.rs
dnd-core/tests/: api_integration.rs  qa_basic_flow.rs  qa_class_features.rs  qa_combat.rs  qa_persistence.rs
dnd-macros/: Cargo.toml
dnd-macros/src/: lib.rs
dnd/examples/: test_app_logic.rs
dnd/src/: app.rs  character_creation.rs  effects.rs  events.rs  headless.rs  main.rs
dnd/src/ui/: layout.rs  mod.rs  render.rs  theme.rs
dnd/src/ui/widgets/: character_panel.rs  combat_tracker.rs  dice_roll.rs  input.rs  mod.rs  narrative.rs  status_bar.rs
docs/: HOW_IT_WORKS.md
lib/: Cargo.toml
lib/src/: action.rs  agent.rs  context.rs  error.rs  id.rs  lib.rs  memory.rs  message.rs  safety.rs  tool.rs
lib/src/llm/: anthropic.rs  mod.rs
