[package]
name = "agents"
version = "0.1.0"
edition = "2024"
description = "Example agents built with the agentic framework"

[dependencies]
agentic = { path = "../lib" }
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.20"
dotenvy = "0.15"

# D&D TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
futures = "0.3"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[lib]
name = "agents"
path = "src/lib.rs"

[[bin]]
name = "dnd_game"
path = "src/bin/dnd_game.rs"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "tool_agent"
path = "examples/tool_agent.rs"
