[package]
name = "claude"
version = "0.1.0"
edition = "2021"
description = "Minimal Anthropic Claude API client"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
