[package]
name = "dnd"
version = "0.1.0"
edition = "2021"
description = "Bevy-based GUI for D&D with AI Dungeon Master"
license.workspace = true
authors.workspace = true

[[bin]]
name = "dnd"
path = "src/main.rs"

[dependencies]
# Bevy game engine
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_egui = "0.31"

# Game core
dnd-core = { path = "../dnd-core" }

# Async runtime for AI worker
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1"

# Lazy initialization
once_cell = "1.19"

# Random for animations
rand = "0.8"

# Environment
dotenvy = "0.15"

[features]
default = []

# Enable dynamic linking for faster compile times during development
dev = ["bevy/dynamic_linking"]
