[package]
name = "dnd"
version = "0.1.0"
edition = "2021"
description = "D&D Dungeon Master TUI"
license = "MIT"

[[bin]]
name = "dnd"
path = "src/main.rs"

[dependencies]
dnd-core = { path = "../dnd-core" }

tokio = { version = "1.0", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
dotenvy = "0.15"
