[package]
name = "agentic"
version = "0.1.0"
edition = "2024"
description = "A Rust framework for building AI agents with planning, memory, and safety"
license = "MIT"
repository = "https://github.com/samuelschlesinger/agentic"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming
tokio-stream = "0.1"

# Lazy initialization
once_cell = "1.20"

[dev-dependencies]
tokio-test = "0.4"
